Possible fix for collection search performance issue.

BUG: 138501

svn path=/trunk/extragear/multimedia/amarok/; revision=611322